attempts to fix sonar issues