@@ -1,8 +1,8 @@
 package uk.co.mruoc.camunda.client.header;
 
 import java.net.http.HttpRequest;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 
 @RequiredArgsConstructor
@@ -11,7 +11,7 @@ public class CompositeHeaderPopulator implements HeaderPopulator {
     private final Collection<HeaderPopulator> populators;
 
     public CompositeHeaderPopulator(HeaderPopulator... populators) {
-        this(Arrays.asList(populators));
+        this(List.of(populators));
     }
 
     @Override
