@@ -3,9 +3,9 @@ package uk.co.mruoc.camunda.client.variable;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.fasterxml.jackson.databind.annotation.JsonSerialize;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Iterator;
+import java.util.List;
 import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
 
@@ -17,7 +17,7 @@ public class Variables implements Iterable<Variable> {
     private final Collection<Variable> values;
 
     public Variables(Variable... values) {
-        this(Arrays.asList(values));
+        this(List.of(values));
     }
 
     @JsonIgnore
